# rules_vulkan

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE
examples/: .gitignore  BUILD  WORKSPACE
examples/shader/: BUILD.bazel  assign.comp
examples/shader_lib/: BUILD.bazel
examples/shader_lib/mylib/: mylib.glsl
examples/shader_lib/mylib/color/: color.glsl
glsl/: BUILD  BUILD.bazel  defs.bzl  repositories.bzl  rules.bzl  toolchain.bzl
vulkan/: BUILD  defs.bzl  repositories.bzl
vulkan/platform/: android.bzl  linux.bzl  macos.bzl  windows.bzl
