"""
"""

load("//glsl:toolchain.bzl", "glsl_toolchain")

toolchain_type(
    name = "toolchain_type",
)

glsl_toolchain(
    name = "on_windows",
    glslc = "@vulkan_windows//:glslc"
)

toolchain(
    name = "glsl_windows_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":on_windows",
    toolchain_type = "@rules_vulkan//glsl:toolchain_type",
)
